FIX: align my collections buttons

--- a/WardrobeWebApp/FrontEnd/FrontEnd/wwwroot/css/site.css
+++ b/WardrobeWebApp/FrontEnd/FrontEnd/wwwroot/css/site.css
@@ -738,10 +738,6 @@ video {
   margin-top: 1.5rem;
 }
 
-.mt-8 {
-  margin-top: 2rem;
-}
-
 .mt-auto {
   margin-top: auto;
 }
@@ -802,10 +798,6 @@ video {
 
 .h-6 {
   height: 1.5rem;
-}
-
-.h-8 {
-  height: 2rem;
 }
 
 .h-\[150px\] {
@@ -898,6 +890,10 @@ video {
 
 .max-w-sm {
   max-width: 24rem;
+}
+
+.flex-none {
+  flex: none;
 }
 
 .shrink-0 {
